# NAI2022-2023

NAI_LAB10/: CMakeLists.txt  main.cpp
NAI_LAB9/: main.cpp
NAI_LAB_1/: CMakeLists.txt  main.cpp
NAI_LAB_2/: ITERACJE 20.txt
NAI_LAB_2/NAI_LAB_2/: CMakeLists.txt  Zeszyt1.xlsx  main.cpp
NAI_LAB_8(7)/: CMakeLists.txt  main.cpp
